@@ -24,7 +24,7 @@
  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  *
  * $FreeBSD: users/kaiwang27/elftc/libelftc.h 392 2009-05-31 19:17:46Z kaiwang27 $
- * $Id: libelftc.h 2863 2013-01-06 03:18:32Z jkoshy $
+ * $Id: libelftc.h 3021 2014-04-17 16:32:00Z jkoshy $
  */
 
 #ifndef	_LIBELFTC_H_
@@ -32,8 +32,10 @@
 
 #include <sys/stat.h>
 
-#include <libelf.h>
-
+/*
+ * Types meant to be opaque to the consumers of these APIs.
+ */
+typedef struct _Elf_Scn Elf_Scn;
 typedef struct _Elftc_Bfd_Target Elftc_Bfd_Target;
 typedef struct _Elftc_String_Table Elftc_String_Table;
 
