@@ -1,4 +1,6 @@
-# $Id: Makefile 2085 2011-10-27 05:06:47Z jkoshy $
+# $Id: Makefile 3025 2014-04-18 16:20:25Z jkoshy $
+
+TOP=		../../..
 
 SUBDIR+=	nm_archive1
 SUBDIR+=	nm_archive2
@@ -9,4 +11,4 @@ SUBDIR+=	nm_option
 SUBDIR+=	nm_shared_object1
 SUBDIR+=	nm_shared_object2
 
-.include <bsd.subdir.mk>
+.include "${TOP}/mk/elftoolchain.subdir.mk"
