@@ -1,3 +1,7 @@
+Sun Apr 20 13:53:31 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Sun Apr 20 13:51:11 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
